--- a/assets/style.css
+++ b/assets/style.css
@@ -7,8 +7,8 @@ header,
 footer {
     width: 100%;
     height: 120px;
-    background-color: red;
-    color: black;
+    background-color: blue;
+    color: white;
 }
 h1,
 h2 {
@@ -36,5 +36,5 @@ p {
     width: 80%;
     margin: 40px auto;
     border: 5px solid #0E0D0D;
-    box-shadow: 5px 10px #CF071C;
+    box-shadow: 5px 10px #888888;
 }
